# afgl

./: .gitignore  README.md  instructions.md  pyproject.toml
report/: main.tex  mathreport.cls  ref.bib  references.bib
report/assets/: group_table_2.tex  group_table_3.tex  lanczos_vs_arnoldi_stats.tex  orthogonalization.tex  table_ex_2.tex  table_ex_3.tex
report/assets/signal/: lanczos-paper-single.tex
report/assets/signal/figures/: Erdos-stopping_criteria.eps  Erdos_Renyi.eps  Sensor.eps  erdos_adapted.eps  erdos_iter_error.eps  erdos_non_adapted.eps  erdos_order30_adapted.eps  erdos_order30_non_adapted.eps  filter_erdos.eps  filter_sensor.eps  hist_erdos.eps  hist_sensor.eps  sensor_graph.eps  sensor_iter_error.eps
report/assets/tables/: group_table_2.tex  group_table_2_no_g.tex  group_table_3.tex  group_table_3_no_g.tex  lanczos_vs_arnoldi_stats.tex  table_ex23_example.tex
src/afgl/: ex1.py  ex23.py  ex_1.py  ex_2.py  ex_23.py  example_1.py  example_2.py  lanczos.py  lanczos_vs_arnoldi.py  main.py  test_1.py  test_2.py
src/afgl/plot/: ex1.py  ex23.py  itersine.py  setup.py
src/afgl/util/: T_tridiag.py  arnoldi.py  build_T_matrix.py  ex1_plot.py  ex23_plot.py  g_function.py  lanczos.py  plot.py  plot_itersine.py
tests/: test_main.py
